Code format, upgrade code to java 21