@@ -82,11 +82,11 @@ public class GuiRenameWorld extends GuiScreen
     protected void keyTyped(char typedChar, int keyCode) throws IOException
     {
         this.field_146583_f.textboxKeyTyped(typedChar, keyCode);
-        ((GuiButton)this.buttonList.get(0)).enabled = this.field_146583_f.getText().trim().length() > 0;
+        ((GuiButton)this.buttonList.getFirst()).enabled = this.field_146583_f.getText().trim().length() > 0;
 
         if (keyCode == 28 || keyCode == 156)
         {
-            this.actionPerformed((GuiButton)this.buttonList.get(0));
+            this.actionPerformed((GuiButton)this.buttonList.getFirst());
         }
     }
 
