@@ -25,7 +25,7 @@ public class GuiIngameMenu extends GuiScreen {
         this.buttonList.add(new GuiButton(1, this.width / 2 - 100, this.height / 4 + 120 + i, I18n.format("menu.returnToMenu", new Object[0])));
 
         if (!this.mc.isIntegratedServerRunning()) {
-            ((GuiButton) this.buttonList.get(0)).displayString = I18n.format("menu.disconnect", new Object[0]);
+            ((GuiButton)this.buttonList.getFirst()).displayString = I18n.format("menu.disconnect", new Object[0]);
         }
 
         this.buttonList.add(new GuiButton(4, this.width / 2 - 100, this.height / 4 + 24 + i, I18n.format("menu.returnToGame", new Object[0])));
@@ -50,11 +50,12 @@ public class GuiIngameMenu extends GuiScreen {
                 boolean flag = this.mc.isIntegratedServerRunning();
                 button.enabled = false;
                 this.mc.theWorld.sendQuittingDisconnectingPacket();
-                this.mc.loadWorld((WorldClient) null);
+                this.mc.loadWorld((WorldClient)null);
 
                 if (flag) {
                     this.mc.displayGuiScreen(new GuiMainMenu());
-                } else {
+                }
+                else {
                     this.mc.displayGuiScreen(new GuiMultiplayer(new GuiMainMenu()));
                 }
 
@@ -64,7 +65,7 @@ public class GuiIngameMenu extends GuiScreen {
                 break;
 
             case 4:
-                this.mc.displayGuiScreen((GuiScreen) null);
+                this.mc.displayGuiScreen((GuiScreen)null);
                 this.mc.setIngameFocus();
                 break;
 
