@@ -164,7 +164,7 @@ public class FontRenderer implements IResourceManagerReloadListener {
         int k = j / 16;
         int l = i / 16;
         int i1 = 1;
-        float f = 8.0F / (float) l;
+        float f = 8.0F / (float)l;
 
         for (int j1 = 0; j1 < 256; ++j1) {
             int k1 = j1 % 16;
@@ -194,7 +194,7 @@ public class FontRenderer implements IResourceManagerReloadListener {
             }
 
             ++i2;
-            this.charWidth[j1] = (int) (0.5D + (double) ((float) i2 * f)) + i1;
+            this.charWidth[j1] = (int)(0.5D + (double)((float)i2 * f)) + i1;
         }
     }
 
@@ -218,7 +218,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
         boolean unicodeFlag = false;
         if (ch == 32) {
             return 4.0F;
-        } else {
+        }
+        else {
             int i = "\u00c0\u00c1\u00c2\u00c8\u00ca\u00cb\u00cd\u00d3\u00d4\u00d5\u00da\u00df\u00e3\u00f5\u011f\u0130\u0131\u0152\u0153\u015e\u015f\u0174\u0175\u017e\u0207\u0000\u0000\u0000\u0000\u0000\u0000\u0000 !\"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\u0000\u00c7\u00fc\u00e9\u00e2\u00e4\u00e0\u00e5\u00e7\u00ea\u00eb\u00e8\u00ef\u00ee\u00ec\u00c4\u00c5\u00c9\u00e6\u00c6\u00f4\u00f6\u00f2\u00fb\u00f9\u00ff\u00d6\u00dc\u00f8\u00a3\u00d8\u00d7\u0192\u00e1\u00ed\u00f3\u00fa\u00f1\u00d1\u00aa\u00ba\u00bf\u00ae\u00ac\u00bd\u00bc\u00a1\u00ab\u00bb\u2591\u2592\u2593\u2502\u2524\u2561\u2562\u2556\u2555\u2563\u2551\u2557\u255d\u255c\u255b\u2510\u2514\u2534\u252c\u251c\u2500\u253c\u255e\u255f\u255a\u2554\u2569\u2566\u2560\u2550\u256c\u2567\u2568\u2564\u2565\u2559\u2558\u2552\u2553\u256b\u256a\u2518\u250c\u2588\u2584\u258c\u2590\u2580\u03b1\u03b2\u0393\u03c0\u03a3\u03c3\u03bc\u03c4\u03a6\u0398\u03a9\u03b4\u221e\u2205\u2208\u2229\u2261\u00b1\u2265\u2264\u2320\u2321\u00f7\u2248\u00b0\u2219\u00b7\u221a\u207f\u00b2\u25a0\u0000".indexOf(ch);
             return i != -1 && !unicodeFlag ? this.renderDefaultChar(i, italic) : this.renderUnicodeChar(ch, italic);
         }
@@ -233,23 +234,23 @@ public class FontRenderer implements IResourceManagerReloadListener {
         int k = italic ? 1 : 0;
         this.renderEngine.bindTexture(this.locationFontTexture);
         int l = this.charWidth[ch];
-        float f = (float) l - 0.01F;
+        float f = (float)l - 0.01F;
         GL11.glBegin(GL11.GL_TRIANGLE_STRIP);
-        GL11.glTexCoord2f((float) i / 128.0F, (float) j / 128.0F);
-        GL11.glVertex3f(this.posX + (float) k, this.posY, 0.0F);
-        GL11.glTexCoord2f((float) i / 128.0F, ((float) j + 7.99F) / 128.0F);
-        GL11.glVertex3f(this.posX - (float) k, this.posY + 7.99F, 0.0F);
-        GL11.glTexCoord2f(((float) i + f - 1.0F) / 128.0F, (float) j / 128.0F);
-        GL11.glVertex3f(this.posX + f - 1.0F + (float) k, this.posY, 0.0F);
-        GL11.glTexCoord2f(((float) i + f - 1.0F) / 128.0F, ((float) j + 7.99F) / 128.0F);
-        GL11.glVertex3f(this.posX + f - 1.0F - (float) k, this.posY + 7.99F, 0.0F);
+        GL11.glTexCoord2f((float)i / 128.0F, (float)j / 128.0F);
+        GL11.glVertex3f(this.posX + (float)k, this.posY, 0.0F);
+        GL11.glTexCoord2f((float)i / 128.0F, ((float)j + 7.99F) / 128.0F);
+        GL11.glVertex3f(this.posX - (float)k, this.posY + 7.99F, 0.0F);
+        GL11.glTexCoord2f(((float)i + f - 1.0F) / 128.0F, (float)j / 128.0F);
+        GL11.glVertex3f(this.posX + f - 1.0F + (float)k, this.posY, 0.0F);
+        GL11.glTexCoord2f(((float)i + f - 1.0F) / 128.0F, ((float)j + 7.99F) / 128.0F);
+        GL11.glVertex3f(this.posX + f - 1.0F - (float)k, this.posY + 7.99F, 0.0F);
         GL11.glEnd();
-        return (float) l;
+        return (float)l;
     }
 
     private ResourceLocation getUnicodePageLocation(int page) {
         if (unicodePageLocations[page] == null) {
-            unicodePageLocations[page] = new ResourceLocation(String.format("textures/font/unicode_page_%02x.png", new Object[]{Integer.valueOf(page)}));
+            unicodePageLocations[page] = new ResourceLocation("textures/font/unicode_page_%02x.png".formatted(new Object[]{Integer.valueOf(page)}));
         }
 
         return unicodePageLocations[page];
@@ -268,15 +269,16 @@ public class FontRenderer implements IResourceManagerReloadListener {
     private float renderUnicodeChar(char ch, boolean italic) {
         if (this.glyphWidth[ch] == 0) {
             return 0.0F;
-        } else {
+        }
+        else {
             int i = ch / 256;
             this.loadGlyphTexture(i);
             int j = this.glyphWidth[ch] >>> 4;
             int k = this.glyphWidth[ch] & 15;
-            float f = (float) j;
-            float f1 = (float) (k + 1);
-            float f2 = (float) (ch % 16 * 16) + f;
-            float f3 = (float) ((ch & 255) / 16 * 16);
+            float f = (float)j;
+            float f1 = (float)(k + 1);
+            float f2 = (float)(ch % 16 * 16) + f;
+            float f3 = (float)((ch & 255) / 16 * 16);
             float f4 = f1 - f - 0.02F;
             float f5 = italic ? 1.0F : 0.0F;
             GL11.glBegin(GL11.GL_TRIANGLE_STRIP);
@@ -304,7 +306,7 @@ public class FontRenderer implements IResourceManagerReloadListener {
      * Draws the specified string.
      */
     public int drawString(String text, int x, int y, int color) {
-        return this.drawString(text, (float) x, (float) y, color, false);
+        return this.drawString(text, (float)x, (float)y, color, false);
     }
 
     /**
@@ -318,7 +320,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
         if (dropShadow) {
             i = this.renderString(text, x + 1.0F, y + 1.0F, color, true);
             i = Math.max(i, this.renderString(text, x, y, color, false));
-        } else {
+        }
+        else {
             i = this.renderString(text, x, y, color, false);
         }
 
@@ -376,18 +379,24 @@ public class FontRenderer implements IResourceManagerReloadListener {
 
                     int j1 = this.colorCode[i1];
                     this.textColor = j1;
-                    GlStateManager.color((float) (j1 >> 16) / 255.0F, (float) (j1 >> 8 & 255) / 255.0F, (float) (j1 & 255) / 255.0F, this.alpha);
-                } else if (i1 == 16) {
+                    GlStateManager.color((float)(j1 >> 16) / 255.0F, (float)(j1 >> 8 & 255) / 255.0F, (float)(j1 & 255) / 255.0F, this.alpha);
+                }
+                else if (i1 == 16) {
                     this.randomStyle = true;
-                } else if (i1 == 17) {
+                }
+                else if (i1 == 17) {
                     this.boldStyle = true;
-                } else if (i1 == 18) {
+                }
+                else if (i1 == 18) {
                     this.strikethroughStyle = true;
-                } else if (i1 == 19) {
+                }
+                else if (i1 == 19) {
                     this.underlineStyle = true;
-                } else if (i1 == 20) {
+                }
+                else if (i1 == 20) {
                     this.italicStyle = true;
-                } else if (i1 == 21) {
+                }
+                else if (i1 == 21) {
                     this.randomStyle = false;
                     this.boldStyle = false;
                     this.strikethroughStyle = false;
@@ -397,7 +406,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
                 }
 
                 ++i;
-            } else {
+            }
+            else {
                 int j = "\u00c0\u00c1\u00c2\u00c8\u00ca\u00cb\u00cd\u00d3\u00d4\u00d5\u00da\u00df\u00e3\u00f5\u011f\u0130\u0131\u0152\u0153\u015e\u015f\u0174\u0175\u017e\u0207\u0000\u0000\u0000\u0000\u0000\u0000\u0000 !\"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\u0000\u00c7\u00fc\u00e9\u00e2\u00e4\u00e0\u00e5\u00e7\u00ea\u00eb\u00e8\u00ef\u00ee\u00ec\u00c4\u00c5\u00c9\u00e6\u00c6\u00f4\u00f6\u00f2\u00fb\u00f9\u00ff\u00d6\u00dc\u00f8\u00a3\u00d8\u00d7\u0192\u00e1\u00ed\u00f3\u00fa\u00f1\u00d1\u00aa\u00ba\u00bf\u00ae\u00ac\u00bd\u00bc\u00a1\u00ab\u00bb\u2591\u2592\u2593\u2502\u2524\u2561\u2562\u2556\u2555\u2563\u2551\u2557\u255d\u255c\u255b\u2510\u2514\u2534\u252c\u251c\u2500\u253c\u255e\u255f\u255a\u2554\u2569\u2566\u2560\u2550\u256c\u2567\u2568\u2564\u2565\u2559\u2558\u2552\u2553\u256b\u256a\u2518\u250c\u2588\u2584\u258c\u2590\u2580\u03b1\u03b2\u0393\u03c0\u03a3\u03c3\u03bc\u03c4\u03a6\u0398\u03a9\u03b4\u221e\u2205\u2208\u2229\u2261\u00b1\u2265\u2264\u2320\u2321\u00f7\u2248\u00b0\u2219\u00b7\u221a\u207f\u00b2\u25a0\u0000".indexOf(c0);
 
                 if (this.randomStyle && j != -1) {
@@ -455,10 +465,10 @@ public class FontRenderer implements IResourceManagerReloadListener {
                     WorldRenderer worldrenderer = tessellator.getWorldRenderer();
                     GlStateManager.disableTexture2D();
                     worldrenderer.begin(7, DefaultVertexFormats.POSITION);
-                    worldrenderer.pos((double) this.posX, (double) (this.posY + (float) (this.FONT_HEIGHT / 2)), 0.0D).endVertex();
-                    worldrenderer.pos((double) (this.posX + f), (double) (this.posY + (float) (this.FONT_HEIGHT / 2)), 0.0D).endVertex();
-                    worldrenderer.pos((double) (this.posX + f), (double) (this.posY + (float) (this.FONT_HEIGHT / 2) - 1.0F), 0.0D).endVertex();
-                    worldrenderer.pos((double) this.posX, (double) (this.posY + (float) (this.FONT_HEIGHT / 2) - 1.0F), 0.0D).endVertex();
+                    worldrenderer.pos((double)this.posX, (double)(this.posY + (float)(this.FONT_HEIGHT / 2)), 0.0D).endVertex();
+                    worldrenderer.pos((double)(this.posX + f), (double)(this.posY + (float)(this.FONT_HEIGHT / 2)), 0.0D).endVertex();
+                    worldrenderer.pos((double)(this.posX + f), (double)(this.posY + (float)(this.FONT_HEIGHT / 2) - 1.0F), 0.0D).endVertex();
+                    worldrenderer.pos((double)this.posX, (double)(this.posY + (float)(this.FONT_HEIGHT / 2) - 1.0F), 0.0D).endVertex();
                     tessellator.draw();
                     GlStateManager.enableTexture2D();
                 }
@@ -469,15 +479,15 @@ public class FontRenderer implements IResourceManagerReloadListener {
                     GlStateManager.disableTexture2D();
                     worldrenderer1.begin(7, DefaultVertexFormats.POSITION);
                     int l = this.underlineStyle ? -1 : 0;
-                    worldrenderer1.pos((double) (this.posX + (float) l), (double) (this.posY + (float) this.FONT_HEIGHT), 0.0D).endVertex();
-                    worldrenderer1.pos((double) (this.posX + f), (double) (this.posY + (float) this.FONT_HEIGHT), 0.0D).endVertex();
-                    worldrenderer1.pos((double) (this.posX + f), (double) (this.posY + (float) this.FONT_HEIGHT - 1.0F), 0.0D).endVertex();
-                    worldrenderer1.pos((double) (this.posX + (float) l), (double) (this.posY + (float) this.FONT_HEIGHT - 1.0F), 0.0D).endVertex();
+                    worldrenderer1.pos((double)(this.posX + (float)l), (double)(this.posY + (float)this.FONT_HEIGHT), 0.0D).endVertex();
+                    worldrenderer1.pos((double)(this.posX + f), (double)(this.posY + (float)this.FONT_HEIGHT), 0.0D).endVertex();
+                    worldrenderer1.pos((double)(this.posX + f), (double)(this.posY + (float)this.FONT_HEIGHT - 1.0F), 0.0D).endVertex();
+                    worldrenderer1.pos((double)(this.posX + (float)l), (double)(this.posY + (float)this.FONT_HEIGHT - 1.0F), 0.0D).endVertex();
                     tessellator1.draw();
                     GlStateManager.enableTexture2D();
                 }
 
-                this.posX += (float) ((int) f);
+                this.posX += (float)((int)f);
             }
         }
     }
@@ -487,7 +497,7 @@ public class FontRenderer implements IResourceManagerReloadListener {
      */
     private int renderStringAligned(String text, int x, int y, int width, int color, boolean dropShadow) {
 
-        return this.renderString(text, (float) x, (float) y, color, dropShadow);
+        return this.renderString(text, (float)x, (float)y, color, dropShadow);
     }
 
     /**
@@ -496,7 +506,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
     private int renderString(String text, float x, float y, int color, boolean dropShadow) {
         if (text == null) {
             return 0;
-        } else {
+        }
+        else {
             if ((color & -67108864) == 0) {
                 color |= -16777216;
             }
@@ -505,15 +516,15 @@ public class FontRenderer implements IResourceManagerReloadListener {
                 color = (color & 16579836) >> 2 | color & -16777216;
             }
 
-            this.red = (float) (color >> 16 & 255) / 255.0F;
-            this.blue = (float) (color >> 8 & 255) / 255.0F;
-            this.green = (float) (color & 255) / 255.0F;
-            this.alpha = (float) (color >> 24 & 255) / 255.0F;
+            this.red = (float)(color >> 16 & 255) / 255.0F;
+            this.blue = (float)(color >> 8 & 255) / 255.0F;
+            this.green = (float)(color & 255) / 255.0F;
+            this.alpha = (float)(color >> 24 & 255) / 255.0F;
             GlStateManager.color(this.red, this.blue, this.green, this.alpha);
             this.posX = x;
             this.posY = y;
             this.renderStringAtPos(text, dropShadow);
-            return (int) this.posX;
+            return (int)this.posX;
         }
     }
 
@@ -523,7 +534,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
     public int getStringWidth(String text) {
         if (text == null) {
             return 0;
-        } else {
+        }
+        else {
             int i = 0;
             boolean flag = false;
 
@@ -539,7 +551,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
                         if (c0 == 114 || c0 == 82) {
                             flag = false;
                         }
-                    } else {
+                    }
+                    else {
                         flag = true;
                     }
 
@@ -563,15 +576,18 @@ public class FontRenderer implements IResourceManagerReloadListener {
     public int getCharWidth(char character) {
         if (character == 167) {
             return -1;
-        } else if (character == 32) {
+        }
+        else if (character == 32) {
             return 4;
-        } else {
+        }
+        else {
             int i = "\u00c0\u00c1\u00c2\u00c8\u00ca\u00cb\u00cd\u00d3\u00d4\u00d5\u00da\u00df\u00e3\u00f5\u011f\u0130\u0131\u0152\u0153\u015e\u015f\u0174\u0175\u017e\u0207\u0000\u0000\u0000\u0000\u0000\u0000\u0000 !\"#$%&\'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[\\]^_`abcdefghijklmnopqrstuvwxyz{|}~\u0000\u00c7\u00fc\u00e9\u00e2\u00e4\u00e0\u00e5\u00e7\u00ea\u00eb\u00e8\u00ef\u00ee\u00ec\u00c4\u00c5\u00c9\u00e6\u00c6\u00f4\u00f6\u00f2\u00fb\u00f9\u00ff\u00d6\u00dc\u00f8\u00a3\u00d8\u00d7\u0192\u00e1\u00ed\u00f3\u00fa\u00f1\u00d1\u00aa\u00ba\u00bf\u00ae\u00ac\u00bd\u00bc\u00a1\u00ab\u00bb\u2591\u2592\u2593\u2502\u2524\u2561\u2562\u2556\u2555\u2563\u2551\u2557\u255d\u255c\u255b\u2510\u2514\u2534\u252c\u251c\u2500\u253c\u255e\u255f\u255a\u2554\u2569\u2566\u2560\u2550\u256c\u2567\u2568\u2564\u2565\u2559\u2558\u2552\u2553\u256b\u256a\u2518\u250c\u2588\u2584\u258c\u2590\u2580\u03b1\u03b2\u0393\u03c0\u03a3\u03c3\u03bc\u03c4\u03a6\u0398\u03a9\u03b4\u221e\u2205\u2208\u2229\u2261\u00b1\u2265\u2264\u2320\u2321\u00f7\u2248\u00b0\u2219\u00b7\u221a\u207f\u00b2\u25a0\u0000".indexOf(character);
 
             boolean unicodeFlag = false;
             if (character > 0 && i != -1 && !unicodeFlag) {
                 return this.charWidth[i];
-            } else if (this.glyphWidth[character] != 0) {
+            }
+            else if (this.glyphWidth[character] != 0) {
                 int j = this.glyphWidth[character] >>> 4;
                 int k = this.glyphWidth[character] & 15;
 
@@ -582,7 +598,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
 
                 ++k;
                 return (k - j) / 2 + 1;
-            } else {
+            }
+            else {
                 return 0;
             }
         }
@@ -617,12 +634,15 @@ public class FontRenderer implements IResourceManagerReloadListener {
                     if (c0 == 114 || c0 == 82) {
                         flag1 = false;
                     }
-                } else {
+                }
+                else {
                     flag1 = true;
                 }
-            } else if (i1 < 0) {
+            }
+            else if (i1 < 0) {
                 flag = true;
-            } else {
+            }
+            else {
                 i += i1;
 
                 if (flag1) {
@@ -635,8 +655,9 @@ public class FontRenderer implements IResourceManagerReloadListener {
             }
 
             if (reverse) {
-                stringbuilder.insert(0, (char) c0);
-            } else {
+                stringbuilder.insert(0, (char)c0);
+            }
+            else {
                 stringbuilder.append(c0);
             }
         }
@@ -698,7 +719,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
 
         if (str.length() <= i) {
             return str;
-        } else {
+        }
+        else {
             String s = str.substring(0, i);
             char c0 = str.charAt(i);
             boolean flag = c0 == 32 || c0 == 10;
@@ -745,7 +767,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
                             if (c1 == 114 || c1 == 82 || isFormatColor(c1)) {
                                 flag = false;
                             }
-                        } else {
+                        }
+                        else {
                             flag = true;
                         }
                     }
@@ -793,7 +816,8 @@ public class FontRenderer implements IResourceManagerReloadListener {
 
                 if (isFormatColor(c0)) {
                     s = "\u00a7" + c0;
-                } else if (isFormatSpecial(c0)) {
+                }
+                else if (isFormatSpecial(c0)) {
                     s = s + "\u00a7" + c0;
                 }
             }
