@@ -146,7 +146,7 @@ public class EffectRenderer
 
         if (this.fxLayers[i][j].size() >= 4000)
         {
-            this.fxLayers[i][j].remove(0);
+            this.fxLayers[i][j].removeFirst();
         }
 
         this.fxLayers[i][j].add(effect);
