@@ -30,7 +30,7 @@ public abstract class AbstractResourcePack implements IResourcePack {
     }
 
     private static String locationToName(ResourceLocation location) {
-        return String.format("%s/%s/%s", new Object[]{"assets", location.getResourceDomain(), location.getResourcePath()});
+        return "%s/%s/%s".formatted(new Object[]{"assets", location.getResourceDomain(), location.getResourcePath()});
     }
 
     protected static String getRelativeName(File p_110595_0_, File p_110595_1_) {
@@ -63,11 +63,11 @@ public abstract class AbstractResourcePack implements IResourcePack {
 
         try {
             bufferedreader = new BufferedReader(new InputStreamReader(p_110596_1_, StandardCharsets.UTF_8));
-            jsonobject = (new JsonParser()).parse((Reader) bufferedreader).getAsJsonObject();
+            jsonobject = (new JsonParser()).parse((Reader)bufferedreader).getAsJsonObject();
         } catch (RuntimeException runtimeexception) {
             throw new JsonParseException(runtimeexception);
         } finally {
-            IOUtils.closeQuietly((Reader) bufferedreader);
+            IOUtils.closeQuietly((Reader)bufferedreader);
         }
 
         return p_110596_0_.parseMetadataSection(p_110596_2_, jsonobject);
