@@ -7,6 +7,6 @@ public class ResourcePackFileNotFoundException extends FileNotFoundException
 {
     public ResourcePackFileNotFoundException(File resourcePack, String p_i1294_2_)
     {
-        super(String.format("\'%s\' in ResourcePack \'%s\'", new Object[] {p_i1294_2_, resourcePack}));
+        super("\'%s\' in ResourcePack \'%s\'".formatted(new Object[]{p_i1294_2_, resourcePack}));
     }
 }
