@@ -52,7 +52,8 @@ public class CommandDebug extends CommandBase {
     public void processCommand(ICommandSender sender, String[] args) throws CommandException {
         if (args.length < 1) {
             throw new WrongUsageException("commands.debug.usage", new Object[0]);
-        } else {
+        }
+        else {
             if (args[0].equals("start")) {
                 if (args.length != 1) {
                     throw new WrongUsageException("commands.debug.usage", new Object[0]);
@@ -62,7 +63,8 @@ public class CommandDebug extends CommandBase {
                 MinecraftServer.getServer().enableProfiling();
                 this.profileStartTime = MinecraftServer.getCurrentTimeMillis();
                 this.profileStartTick = MinecraftServer.getServer().getTickCounter();
-            } else {
+            }
+            else {
                 if (!args[0].equals("stop")) {
                     throw new WrongUsageException("commands.debug.usage", new Object[0]);
                 }
@@ -81,7 +83,7 @@ public class CommandDebug extends CommandBase {
                 int l = j - this.profileStartTick;
                 this.saveProfileResults(k, l);
                 MinecraftServer.getServer().theProfiler.profilingEnabled = false;
-                notifyOperators(sender, this, "commands.debug.stop", new Object[]{Float.valueOf((float) k / 1000.0F), Integer.valueOf(l)});
+                notifyOperators(sender, this, "commands.debug.stop", new Object[]{Float.valueOf((float)k / 1000.0F), Integer.valueOf(l)});
             }
         }
     }
@@ -113,7 +115,7 @@ public class CommandDebug extends CommandBase {
         stringbuilder.append("\n\n");
         stringbuilder.append("Time span: ").append(timeSpan).append(" ms\n");
         stringbuilder.append("Tick span: ").append(tickSpan).append(" ticks\n");
-        stringbuilder.append("// This is approximately ").append(String.format("%.2f", new Object[]{Float.valueOf((float) tickSpan / ((float) timeSpan / 1000.0F))})).append(" ticks per second. It should be ").append((int) 20).append(" ticks per second\n\n");
+        stringbuilder.append("// This is approximately ").append("%.2f".formatted(new Object[]{Float.valueOf((float)tickSpan / ((float)timeSpan / 1000.0F))})).append(" ticks per second. It should be ").append((int)20).append(" ticks per second\n\n");
         stringbuilder.append("--- BEGIN PROFILE DUMP ---\n\n");
         this.func_147202_a(0, "root", stringbuilder);
         stringbuilder.append("--- END PROFILE DUMP ---\n\n");
@@ -125,20 +127,20 @@ public class CommandDebug extends CommandBase {
 
         if (list != null && list.size() >= 3) {
             for (int i = 1; i < list.size(); ++i) {
-                Profiler.Result profiler$result = (Profiler.Result) list.get(i);
-                stringBuilder.append(String.format("[%02d] ", new Object[]{Integer.valueOf(p_147202_1_)}));
+                Profiler.Result profiler$result = (Profiler.Result)list.get(i);
+                stringBuilder.append("[%02d] ".formatted(new Object[]{Integer.valueOf(p_147202_1_)}));
 
                 for (int j = 0; j < p_147202_1_; ++j) {
                     stringBuilder.append(" ");
                 }
 
-                stringBuilder.append(profiler$result.profilerName).append(" - ").append(String.format("%.2f", new Object[]{Double.valueOf(profiler$result.usePercentage)})).append("%/").append(String.format("%.2f", new Object[]{Double.valueOf(profiler$result.totalUsePercentage)})).append("%\n");
+                stringBuilder.append(profiler$result.profilerName).append(" - ").append("%.2f".formatted(new Object[]{Double.valueOf(profiler$result.usePercentage)})).append("%/").append("%.2f".formatted(new Object[]{Double.valueOf(profiler$result.totalUsePercentage)})).append("%\n");
 
                 if (!profiler$result.profilerName.equals("unspecified")) {
                     try {
                         this.func_147202_a(p_147202_1_ + 1, p_147202_2_ + "." + profiler$result.profilerName, stringBuilder);
                     } catch (Exception exception) {
-                        stringBuilder.append("[[ EXCEPTION ").append((Object) exception).append(" ]]");
+                        stringBuilder.append("[[ EXCEPTION ").append((Object)exception).append(" ]]");
                     }
                 }
             }
@@ -152,7 +154,7 @@ public class CommandDebug extends CommandBase {
         String[] astring = new String[]{"Shiny numbers!", "Am I not running fast enough? :(", "I\'m working as hard as I can!", "Will I ever be good enough for you? :(", "Speedy. Zoooooom!", "Hello world", "40% better than a crash report.", "Now with extra numbers", "Now with less numbers", "Now with the same numbers", "You should add flames to things, it makes them go faster!", "Do you feel the need for... optimization?", "*cracks redstone whip*", "Maybe if you treated it better then it\'ll have more motivation to work faster! Poor server."};
 
         try {
-            return astring[(int) (System.nanoTime() % (long) astring.length)];
+            return astring[(int)(System.nanoTime() % (long)astring.length)];
         } catch (Throwable var2) {
             return "Witty comment unavailable :(";
         }
