@@ -33,7 +33,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
     protected void entityInit() {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte) 0));
+        this.dataWatcher.addObject(16, Byte.valueOf((byte)0));
     }
 
     /**
@@ -77,14 +77,15 @@ public class EntityMinecartFurnace extends EntityMinecart {
         double d0 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
         if (d0 > 1.0E-4D && this.motionX * this.motionX + this.motionZ * this.motionZ > 0.001D) {
-            d0 = (double) MathHelper.sqrt_double(d0);
+            d0 = (double)MathHelper.sqrt_double(d0);
             this.pushX /= d0;
             this.pushZ /= d0;
 
             if (this.pushX * this.motionX + this.pushZ * this.motionZ < 0.0D) {
                 this.pushX = 0.0D;
                 this.pushZ = 0.0D;
-            } else {
+            }
+            else {
                 double d1 = d0 / this.getMaximumSpeed();
                 this.pushX *= d1;
                 this.pushZ *= d1;
@@ -96,7 +97,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
         double d0 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
         if (d0 > 1.0E-4D) {
-            d0 = (double) MathHelper.sqrt_double(d0);
+            d0 = (double)MathHelper.sqrt_double(d0);
             this.pushX /= d0;
             this.pushZ /= d0;
             double d1 = 1.0D;
@@ -105,7 +106,8 @@ public class EntityMinecartFurnace extends EntityMinecart {
             this.motionZ *= 0.800000011920929D;
             this.motionX += this.pushX * d1;
             this.motionZ += this.pushZ * d1;
-        } else {
+        }
+        else {
             this.motionX *= 0.9800000190734863D;
             this.motionY *= 0.0D;
             this.motionZ *= 0.9800000190734863D;
@@ -122,7 +124,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
         if (itemstack != null && itemstack.getItem() == Items.coal) {
             if (!playerIn.capabilities.isCreativeMode && --itemstack.stackSize == 0) {
-                playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, (ItemStack) null);
+                playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, (ItemStack)null);
             }
 
             this.fuel += 3600;
@@ -140,7 +142,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
         super.writeEntityToNBT(tagCompound);
         tagCompound.setDouble("PushX", this.pushX);
         tagCompound.setDouble("PushZ", this.pushZ);
-        tagCompound.setShort("Fuel", (short) this.fuel);
+        tagCompound.setShort("Fuel", (short)this.fuel);
     }
 
     /**
@@ -159,9 +161,10 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
     protected void setMinecartPowered(boolean p_94107_1_) {
         if (p_94107_1_) {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte) (this.dataWatcher.getWatchableObjectByte(16) | 1)));
-        } else {
-            this.dataWatcher.updateObject(16, Byte.valueOf((byte) (this.dataWatcher.getWatchableObjectByte(16) & -2)));
+            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(this.dataWatcher.getWatchableObjectByte(16) | 1)));
+        }
+        else {
+            this.dataWatcher.updateObject(16, Byte.valueOf((byte)(this.dataWatcher.getWatchableObjectByte(16) & -2)));
         }
     }
 
