@@ -22,20 +22,20 @@ public class PingResponseHandler extends ChannelInboundHandlerAdapter {
     }
 
     public void channelRead(ChannelHandlerContext p_channelRead_1_, Object p_channelRead_2_) throws Exception {
-        ByteBuf bytebuf = (ByteBuf) p_channelRead_2_;
+        ByteBuf bytebuf = (ByteBuf)p_channelRead_2_;
         bytebuf.markReaderIndex();
         boolean flag = true;
 
         try {
             if (bytebuf.readUnsignedByte() == 254) {
-                InetSocketAddress inetsocketaddress = (InetSocketAddress) p_channelRead_1_.channel().remoteAddress();
+                InetSocketAddress inetsocketaddress = (InetSocketAddress)p_channelRead_1_.channel().remoteAddress();
                 MinecraftServer minecraftserver = this.networkSystem.getServer();
                 int i = bytebuf.readableBytes();
 
                 switch (i) {
                     case 0:
                         logger.debug("Ping: (<1.3.x) from {}:{}", new Object[]{inetsocketaddress.getAddress(), Integer.valueOf(inetsocketaddress.getPort())});
-                        String s2 = String.format("%s\u00a7%d\u00a7%d", new Object[]{minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
+                        String s2 = "%s\u00a7%d\u00a7%d".formatted(new Object[]{minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
                         this.writeAndFlush(p_channelRead_1_, this.getStringBuffer(s2));
                         break;
 
@@ -45,7 +45,7 @@ public class PingResponseHandler extends ChannelInboundHandlerAdapter {
                         }
 
                         logger.debug("Ping: (1.4-1.5.x) from {}:{}", new Object[]{inetsocketaddress.getAddress(), Integer.valueOf(inetsocketaddress.getPort())});
-                        String s = String.format("\u00a71\u0000%d\u0000%s\u0000%s\u0000%d\u0000%d", new Object[]{Integer.valueOf(127), minecraftserver.getMinecraftVersion(), minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
+                        String s = "\u00a71\u0000%d\u0000%s\u0000%s\u0000%d\u0000%d".formatted(new Object[]{Integer.valueOf(127), minecraftserver.getMinecraftVersion(), minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
                         this.writeAndFlush(p_channelRead_1_, this.getStringBuffer(s));
                         break;
 
@@ -64,7 +64,7 @@ public class PingResponseHandler extends ChannelInboundHandlerAdapter {
                         }
 
                         logger.debug("Ping: (1.6) from {}:{}", new Object[]{inetsocketaddress.getAddress(), Integer.valueOf(inetsocketaddress.getPort())});
-                        String s1 = String.format("\u00a71\u0000%d\u0000%s\u0000%s\u0000%d\u0000%d", new Object[]{Integer.valueOf(127), minecraftserver.getMinecraftVersion(), minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
+                        String s1 = "\u00a71\u0000%d\u0000%s\u0000%s\u0000%d\u0000%d".formatted(new Object[]{Integer.valueOf(127), minecraftserver.getMinecraftVersion(), minecraftserver.getMOTD(), Integer.valueOf(minecraftserver.getCurrentPlayerCount()), Integer.valueOf(minecraftserver.getMaxPlayers())});
                         ByteBuf bytebuf1 = this.getStringBuffer(s1);
 
                         try {
