@@ -26,21 +26,21 @@ public class MapGenStructureIO {
     }
 
     public static String getStructureStartName(StructureStart start) {
-        return (String) startClassToNameMap.get(start.getClass());
+        return (String)startClassToNameMap.get(start.getClass());
     }
 
     public static String getStructureComponentName(StructureComponent component) {
-        return (String) componentClassToNameMap.get(component.getClass());
+        return (String)componentClassToNameMap.get(component.getClass());
     }
 
     public static StructureStart getStructureStart(NBTTagCompound tagCompound, World worldIn) {
         StructureStart structurestart = null;
 
         try {
-            Class<? extends StructureStart> oclass = (Class) startNameToClassMap.get(tagCompound.getString("id"));
+            Class<? extends StructureStart> oclass = (Class)startNameToClassMap.get(tagCompound.getString("id"));
 
             if (oclass != null) {
-                structurestart = (StructureStart) oclass.newInstance();
+                structurestart = (StructureStart)oclass.getDeclaredConstructor().newInstance();
             }
         } catch (Exception exception) {
             logger.warn("Failed Start with id " + tagCompound.getString("id"));
@@ -49,7 +49,8 @@ public class MapGenStructureIO {
 
         if (structurestart != null) {
             structurestart.readStructureComponentsFromNBT(worldIn, tagCompound);
-        } else {
+        }
+        else {
             logger.warn("Skipping Structure with id " + tagCompound.getString("id"));
         }
 
@@ -60,10 +61,10 @@ public class MapGenStructureIO {
         StructureComponent structurecomponent = null;
 
         try {
-            Class<? extends StructureComponent> oclass = (Class) componentNameToClassMap.get(tagCompound.getString("id"));
+            Class<? extends StructureComponent> oclass = (Class)componentNameToClassMap.get(tagCompound.getString("id"));
 
             if (oclass != null) {
-                structurecomponent = (StructureComponent) oclass.newInstance();
+                structurecomponent = (StructureComponent)oclass.getDeclaredConstructor().newInstance();
             }
         } catch (Exception exception) {
             logger.warn("Failed Piece with id " + tagCompound.getString("id"));
@@ -72,7 +73,8 @@ public class MapGenStructureIO {
 
         if (structurecomponent != null) {
             structurecomponent.readStructureBaseNBT(worldIn, tagCompound);
-        } else {
+        }
+        else {
             logger.warn("Skipping Piece with id " + tagCompound.getString("id"));
         }
 
